--- a/TestForm/TestFrm.resx
+++ b/TestForm/TestFrm.resx
@@ -1956,6 +1956,39 @@
   <data name="&gt;&gt;label6.ZOrder" xml:space="preserve">
     <value>58</value>
   </data>
+  <data name="label18.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label18.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="label18.Location" type="System.Drawing.Point, System.Drawing">
+    <value>15, 85</value>
+  </data>
+  <data name="label18.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
+  <data name="label18.Size" type="System.Drawing.Size, System.Drawing">
+    <value>114, 17</value>
+  </data>
+  <data name="label18.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="label18.Text" xml:space="preserve">
+    <value>Network Timeout</value>
+  </data>
+  <data name="&gt;&gt;label18.Name" xml:space="preserve">
+    <value>label18</value>
+  </data>
+  <data name="&gt;&gt;label18.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;label18.Parent" xml:space="preserve">
+    <value>groupBox2</value>
+  </data>
+  <data name="&gt;&gt;label18.ZOrder" xml:space="preserve">
+    <value>59</value>
+  </data>
   <data name="label17.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -1987,7 +2020,7 @@
     <value>groupBox2</value>
   </data>
   <data name="&gt;&gt;label17.ZOrder" xml:space="preserve">
-    <value>59</value>
+    <value>60</value>
   </data>
   <data name="label19.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2020,7 +2053,7 @@
     <value>groupBox2</value>
   </data>
   <data name="&gt;&gt;label19.ZOrder" xml:space="preserve">
-    <value>60</value>
+    <value>61</value>
   </data>
   <data name="label15.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2053,7 +2086,7 @@
     <value>groupBox2</value>
   </data>
   <data name="&gt;&gt;label15.ZOrder" xml:space="preserve">
-    <value>61</value>
+    <value>62</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2086,7 +2119,7 @@
     <value>groupBox2</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>62</value>
+    <value>63</value>
   </data>
   <data name="txtIPaddr.Location" type="System.Drawing.Point, System.Drawing">
     <value>276, 25</value>
@@ -2110,7 +2143,7 @@
     <value>groupBox2</value>
   </data>
   <data name="&gt;&gt;txtIPaddr.ZOrder" xml:space="preserve">
-    <value>63</value>
+    <value>64</value>
   </data>
   <data name="txtCacheSensorData.Location" type="System.Drawing.Point, System.Drawing">
     <value>612, 58</value>
@@ -2134,7 +2167,31 @@
     <value>groupBox2</value>
   </data>
   <data name="&gt;&gt;txtCacheSensorData.ZOrder" xml:space="preserve">
-    <value>64</value>
+    <value>65</value>
+  </data>
+  <data name="txtTimeout.Location" type="System.Drawing.Point, System.Drawing">
+    <value>276, 82</value>
+  </data>
+  <data name="txtTimeout.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
+  <data name="txtTimeout.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 22</value>
+  </data>
+  <data name="txtTimeout.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;txtTimeout.Name" xml:space="preserve">
+    <value>txtTimeout</value>
+  </data>
+  <data name="&gt;&gt;txtTimeout.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;txtTimeout.Parent" xml:space="preserve">
+    <value>groupBox2</value>
+  </data>
+  <data name="&gt;&gt;txtTimeout.ZOrder" xml:space="preserve">
+    <value>66</value>
   </data>
   <data name="txtCacheConnection.Location" type="System.Drawing.Point, System.Drawing">
     <value>276, 55</value>
@@ -2158,7 +2215,7 @@
     <value>groupBox2</value>
   </data>
   <data name="&gt;&gt;txtCacheConnection.ZOrder" xml:space="preserve">
-    <value>65</value>
+    <value>67</value>
   </data>
   <data name="txtNumberOfSwitches.Location" type="System.Drawing.Point, System.Drawing">
     <value>81, 25</value>
@@ -2182,7 +2239,7 @@
     <value>groupBox2</value>
   </data>
   <data name="&gt;&gt;txtNumberOfSwitches.ZOrder" xml:space="preserve">
-    <value>66</value>
+    <value>68</value>
   </data>
   <data name="groupBox2.Location" type="System.Drawing.Point, System.Drawing">
     <value>15, 290</value>
